[package]
name = "rustgrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.2"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"
notify = "4.0.17"
reed-solomon-erasure = "4.0"

[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"