[package]
name = "rustgrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.2"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
sha2 = "0.10"
notify = "4.0.17"
reed-solomon-erasure = "4.0"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
uuid = { version = "1.0.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"