[package]
name = "nuvolabin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
notify = "4.0.17"
nuvola = { path = "lib" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["lib"]

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"