[package]
name = "nuvola"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.2"
bincode = "1.3.3"
dotenv = "0.15.0"
notify = "4.0.17"
prost = "0.9"
rand = "0.8.5"
reed-solomon-erasure = "4.0"
rsa = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tonic = "0.6"
uuid = { version = "1.0.0", features = ["v4"] }

[dependencies.rustbreak]
version = "2"
features = ["bin_enc"]

[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"